--- a/team.Rmd
+++ b/team.Rmd
@@ -11,19 +11,23 @@ h1 {
 }
 </style>
 
-Our interest group was founded in 2023 by Clare Patterson, Marian Marchal, and Vinicius Macuch Silva.
+Our interest group was founded in 2023 by Clare Patterson, Marian Marchal, and Vinicius Macuch Silva. Morgan Moyer joined the team in late 2024.
 
 **Clare Patterson**
 
-I’m a postdoctoral researcher at the CRC Prominence in Language in Cologne, Germany. My research interests are in the processing of sentence and discourse-level phenomena related to coherence such as anaphora and discourse connectives. I’ve used offline and online experimental methods, including self-paced reading and eye-tracking, to investigate various aspects of anaphora resolution both in first-language users and in adult second-language learners. I’m also interested in how our findings can be modelled using Bayesian frameworks, how we can investigate other discourse-level phenomena using more naturalistic experimental paradigms, and how to combine these with corpus and modelling approaches.
+I’m a lecturer at the University of Warwick, UK. My research interests are in the processing of sentence and discourse-level phenomena related to coherence such as anaphora and discourse connectives. I’ve used offline and online experimental methods, including self-paced reading and eye-tracking, to investigate various aspects of anaphora resolution both in first-language users and in adult second-language learners. I’m also interested in how our findings can be modelled using Bayesian frameworks, how we can investigate other discourse-level phenomena using more naturalistic experimental paradigms, and how to combine these with corpus and modelling approaches.
 
 
 **Marian Marchal**
 
 I'm a PhD student at Saarland University in Vera Demberg's lab. My work focuses on the role of relational and contextual cues in processing discourse relations, but I am interested in anything remotely related to this. In my research, I often combine various psycholinguistic tasks (e.g. self-paced reading, comprehension) to test my hypotheses. These hypotheses are often inspired by corpus research and cognitive models of language processing.
 
+
+**Morgan Moyer**
+
+I'm a postdoc at the Sorbonne University and affiliated with the Institute Jean-Nicod in Paris, France. I'm interested in how hearers construct meaning in discourse from different sources of information, and what the reveals about the structure of the mind. I use primarily quantitative methods, but was also trained in formal linguistic methods. 
+
+
 **Vinicius Macuch Silva**
 
-I'm a post-doctoral fellow working in the Visual Communication (ViCom) Priority Programme.
-
-I'm interested in how people use language to create meaning in communication, both when interacting with others and when producing and interpreting language in various other settings. In my research I use primarily quantitative empirical methods, including controlled experimentation as well as computational and corpus analysis, to investigate issues related to pragmatic inferencing, strategic communication, argumentation and stance-taking, as well as expressive and affective meaning.
+I'm a post-doctoral fellow working in the Visual Communication (ViCom) Priority Programme at the University of Frankfurt, Germany. I'm interested in how people use language to create meaning in communication, both when interacting (face-to-face) with others and when producing and interpreting language in various other settings. In my research I use primarily quantitative empirical methods, including controlled experimentation as well as computational and corpus analysis, to investigate issues related to pragmatic inferencing, strategic communication, argumentation and stance-taking, as well as expressive and affective meaning.
