updated personal page

--- a/team.Rmd
+++ b/team.Rmd
@@ -30,4 +30,4 @@ I'm a postdoc at the Sorbonne University and affiliated with the Institute Jean-
 
 **Vinicius Macuch Silva**
 
-I'm a post-doctoral fellow working in the Visual Communication (ViCom) Priority Programme at the University of Frankfurt, Germany. I'm interested in how people use language to create meaning in communication, both when interacting (face-to-face) with others and when producing and interpreting language in various other settings. In my research I use primarily quantitative empirical methods, including controlled experimentation as well as computational and corpus analysis, to investigate issues related to pragmatic inferencing, strategic communication, argumentation and stance-taking, as well as expressive and affective meaning.
+I'm a post-doctoral fellow working in the Visual Communication (ViCom) Priority Programme at the Goethe University Frankfurt, Germany. I'm interested in how people use language to create meaning in communication, both when interacting (face-to-face) with others and when producing and interpreting language in various other settings. In my research I use primarily quantitative empirical methods, including controlled experimentation as well as computational and corpus analysis, to investigate questions related to pragmatic inferencing, strategic communication, argumentation and stance-taking, as well as expressive and affective meaning.
