--- a/meetings.Rmd
+++ b/meetings.Rmd
@@ -20,7 +20,15 @@ We kicked off our interest group with an online Autumn series in 2023. In 2024, 
 
 **Spring series 2025**
 
-May 13 - **[Diana Mazzarella](https://sites.google.com/site/mazzarelladiana/)**, **University of Neuchâtel**
+June 10 - **[Hannah Rohde](https://www.lel.ed.ac.uk/~hrohde/)**, **University of Edinburgh** - TBA
+
+## Past meetings
+
+<details>
+<summary>**Spring series 2025**</summary>
+
+<details>
+<summary>May 13 - **[Diana Mazzarella](https://sites.google.com/site/mazzarelladiana/)**, **University of Neuchâtel**</summary>
 
 **Understanding irony (mis)understanding**
 
@@ -28,9 +36,9 @@ Verbal irony typically involves making a statement that expresses a proposition 
 
 How does research in experimental and developmental pragmatics measure irony understanding? In this presentation, I discuss some of the methodological challenges involved in designing experiments that investigate children’s developing understanding, or adults’ processing, of verbal irony. On the one hand, I illustrate the key role of various contextual features in modulating participants’ responses. On the other hand, I reflect on the delicate balance between capturing spontaneous interpretations and oversimplifying measures, risking the overinterpretation of participants’ behaviour.
 
-June 10 - **[Hannah Rohde](https://www.lel.ed.ac.uk/~hrohde/)**, **University of Edinburgh** - TBA
-
-## Past meetings
+*For a recording of this talk, send us an email.*
+</details>
+</details>
 
 <details>
 <summary>**Autumn series 2024**</summary>
