--- a/team.Rmd
+++ b/team.Rmd
@@ -24,4 +24,4 @@ I'm a postdoc at the Sorbonne University and affiliated with the Institute Jean-
 
 **Vinicius Macuch Silva**
 
-I’m a post-doctoral researcher at the Institute of Linguistics of the Goethe University Frankfurt. My research deals with various aspects of linguistic meaning and how people use language in different communicative settings (e.g. in face-to-face interaction, on the web, etc.). In particular, I’m interested in how people produce and interpret polysemous and polyfunctional linguistic forms in context. I primarily use quantitative empirical methods, including controlled experimentation as well as statistical and corpus-analytic methods, to investigate questions related to pragmatic inferencing, strategic communication, argumentation and stance-taking, as well as expressive and affective meaning.
+I’m a post-doctoral researcher at the Institute of Linguistics of the Goethe University Frankfurt, Germany. My research deals with various aspects of linguistic meaning and how people use language in different communicative settings (e.g. in face-to-face interaction, on the web, etc.). In particular, I’m interested in how people produce and interpret polysemous and polyfunctional linguistic forms in context. I primarily use quantitative empirical methods, including controlled experimentation as well as statistical and corpus-analytic methods, to investigate questions related to pragmatic inferencing, strategic communication, argumentation and stance-taking, as well as expressive and affective meaning.
