--- a/satellite-event.Rmd
+++ b/satellite-event.Rmd
@@ -23,7 +23,15 @@ We invite our speakers to take a meta-stance by tackling how they have approache
 
 ## Logistics
 
-**Format**
+**When & where**
+
+September 16, 14:30 - 17:30
+
+University of Cambridge, Cambridge, UK
+
+**Format & schedule**
+
+Panel discussion with [Daniel Altshuler](https://danielaltshuler.com/) (Oxford) and [Jet Hoek](https://jethoek.github.io/) (Radboud).
 
 Introduction (14:30 - 14:40)
 
