--- a/satellite-event.Rmd
+++ b/satellite-event.Rmd
@@ -52,3 +52,9 @@ Speaker 2 (15:40 - 16:30)
 Break 2 (16:30 - 16:40)
 
 Discussion (16:40 - 17:30)
+
+**Registration**
+
+If you would like to register for the event, please use the link below and follow the instructions on the Evenbrite page.
+
+https://www.eventbrite.com/e/discomatix-xprag-2025-satellite-event-tickets-1383405967489?aff=oddtdtcreator&utm-source=cp&utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing
