--- a/satellite-event.Rmd
+++ b/satellite-event.Rmd
@@ -55,6 +55,6 @@ Discussion (16:40 - 17:30)
 
 **Registration**
 
-If you would like to register for the event, please use the link below and follow the instructions on the Evenbrite page.
+If you would like to register for the event (free of charge!), please use the link below and follow the instructions on the Evenbrite page. Note that the event is organized independently from the main XPrag 2025 conference.
 
 https://www.eventbrite.com/e/discomatix-xprag-2025-satellite-event-tickets-1383405967489?aff=oddtdtcreator&utm-source=cp&utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing
