--- a/satellite-event.Rmd
+++ b/satellite-event.Rmd
@@ -35,7 +35,7 @@ Jet is an assistant professor at Radbound University Nijmegen's Department of La
 
 **When & where**
 
-September 16, 14:30 - 17:30
+September 16, 14:30 - 17:40
 
 University of Cambridge, Cambridge, UK
 
@@ -45,13 +45,13 @@ Introduction (14:30 - 14:40)
 
 Speaker 1 (14:40 - 15:30)
 
-Break 1 (15:30 - 15:40)
+Short break (15:30 - 15:40)
 
 Speaker 2 (15:40 - 16:30)
 
-Break 2 (16:30 - 16:40)
+Coffee break (16:30 - 16:50)
 
-Discussion (16:40 - 17:30)
+Discussion (16:50 - 17:40)
 
 **Registration**
 
